apd_detector_rust/build_final_error_v5_utf8.txt
**********************************************************************
** Visual Studio 2022 Developer Command Prompt v17.14.28
** Copyright (c) 2025 Microsoft Corporation
**********************************************************************
[vcvarsall.bat] Environment initialized for: 'x64'
cmd :    Compiling 
apd_detector v0.1.0 (C:\Magan
g_Alif\Trial\apd_detector_rus
t)
At line:1 char:1
+ cmd /c "call ""C:\Program 
Files\Microsoft Visual 
Studio\2022\Communit ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling ap..._detector_rus   
 t):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
warning: unused import: 
`std::path::PathBuf`
 --> src\main.rs:2:5
  |
2 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`std::path::Path`
 --> src\detector.rs:8:5
  |
8 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused imports: 
`CV_32F` and `Size`
 --> src\utils.rs:1:40
  |
1 | use 
opencv::core::{Point, 
Scalar, Mat, Size, CV_32F};
  |                          
              ^^^^  ^^^^^^

error[E0616]: field `inputs` 
of struct `Session` is 
private
  --> src\detector.rs:56:39
   |
56 |         let input_name 
= self.session.inputs[0].name
.as_str();
   |                         
              ^^^^^^ private 
field
   |
help: a method `inputs` also 
exists, call it with 
parentheses
   |
56 |         let input_name 
= self.session.inputs()[0].na
me.as_str();
   |                         
                    ++

error[E0277]: the trait 
bound 
`SessionInputValue<'_>: From<
ArrayBase<ViewRepr<&f32>, 
Dim<[usize; 4]>>>` is not 
satisfied
  --> src\detector.rs:61:18
   |
61 |             
.run(inputs![input_name => 
input_array.view()]?)
   |                  ^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^ the trait `From<ArrayBa
se<ViewRepr<&f32>, 
Dim<[usize; 4]>>>` is not 
implemented for 
`SessionInputValue<'_>`
   |
help: the following other 
types implement trait 
`From<T>`
  --> C:\Users\Magang\.cargo\
registry\src\index.crates.io-
1949cf8c6b5b557f\ort-2.0.0-rc
.12\src\session\input.rs:24:1
   |
24 | impl<'v, T: 
ValueTypeMarker + ?Sized> 
From<ValueRefMut<'v, T>> for 
SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^ 
`SessionInputValue<'_>` 
implements 
`From<ValueRefMut<'_, T>>`
...
29 | impl<'v, T: 
ValueTypeMarker + ?Sized> 
From<ValueRef<'v, T>> for 
SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^ `SessionInputValue<'_>` 
implements 
`From<ValueRef<'_, T>>`
...
34 | impl<T: ValueTypeMarker 
+ ?Sized> From<Value<T>> for 
SessionInputValue<'_> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^ 
`SessionInputValue<'_>` 
implements 
`From<ort::value::Value<T>>`
...
39 | impl<'v, T: 
ValueTypeMarker + ?Sized> 
From<&'v Value<T>> for 
SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 `SessionInputValue<'_>` 
implements 
`From<&ort::value::Value<T>>`
   = note: this error 
originates in the macro 
`inputs` (in Nightly builds, 
run with -Z macro-backtrace 
for more info)

error[E0277]: the `?` 
operator can only be applied 
to values that implement 
`Try`
  --> src\detector.rs:61:18
   |
61 |             
.run(inputs![input_name => 
input_array.view()]?)
   |                  ^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^ the `?` operator 
cannot be applied to type 
`Vec<(Cow<'_, str>, 
SessionInputValue<'_>)>`
   |
   = help: the nightly-only, 
unstable trait `Try` is not 
implemented for 
`Vec<(Cow<'_, str>, 
SessionInputValue<'_>)>`

error[E0599]: no method 
named `into_dyn` found for 
tuple `(&ort::value::Shape, 
&[_])` in the current scope
  --> src\detector.rs:69:14
   |
67 |           let 
output_tensor: 
ArrayViewD<f32> = outputs[0]
   |  _______________________
_______________________-
68 | |             
.try_extract_tensor()?
69 | |             
.into_dyn();
   | |_____________-^^^^^^^^
   |
help: there is a method 
`into` with a similar name
   |
69 -             .into_dyn();
69 +             .into();
   |

Some errors have detailed 
explanations: E0277, E0599, 
E0616.
For more information about 
an error, try `rustc 
--explain E0277`.
warning: `apd_detector` (bin 
"apd_detector") generated 3 
warnings
error: could not compile 
`apd_detector` (bin 
"apd_detector") due to 4 
previous errors; 3 warnings 
emitted
